<resources>
    <string name="app_name">«ПРОСТО».</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>

    <string name="registration_required_fields">*Поля, обязательные для заполнения.</string>
    <string name="registration_email">Email*</string>
    <string name="registration_password">Пароль* (От 6 символов)</string>
    <string name="registration_first_name">Имя*</string>
    <string name="registration_last_name">Фамилия*</string>
    <string name="registration_gender">Пол*</string>
    <string name="registration_marital_status">Семейный статус*</string>
    <string name="registration_birth_date">Дата рождения*</string>
    <string name="registration_phone_number">Телефон</string>
    <string name="registration_family_status">Семейное положение*</string>
    <string name="registration_agreement_personal_data">Согласие на обработку персональных данных*</string>
    <string name="registration_agreement_participation">Cогласие на условия участия в проекте и получение уведомлений на e-mail*</string>


    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>

    <string name="forgot_password">Забыли свой пароль?</string>
    <string name="already_have_account">Уже есть аккаунт? Войдите вместо регистрации!</string>

    <string name="date">Дата:</string>
    <string name="place">Место:</string>
    <string name="speaker">Спикер:</string>
    <string name="description">Описание</string>
    <string name="registration_event">Записаться на мероприятие</string>

    <string name="news_lent">Лента</string>
    <string name="coworking">Коворкинг</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="next">Далее</string>

    <string name="coworking_date">Дата</string>
    <string name="coworking_spaces">Всего мест:</string>
    <string name="coworking_free_spaces">Свободно мест:</string>
    <string name="coworking_purpose">Цель посещение коворкинга</string>
    <string name="coworking_purpose1">Самостоятельная работа</string>
    <string name="coworking_purpose2">Организация собственного досуга (отдых)</string>
    <string name="coworking_purpose3">Самостоятельная работа в рамках Проектной деятельности</string>
    <string name="coworking_start_time">Начало</string>
    <string name="coworking_end_time">Окончание</string>

    <string name="coworking_equipment_ask">Какая техника вам нужна для работы в коворкинге?</string>
    <string name="coworking_equipment_dialog_yes">Зарегистрироваться</string>
    <string name="coworking_equipment_dialog_no">Мне не нужна орг. техника</string>

    <string name="coworking_choose">Коворкинг</string>
    <string name="coworking_choose_start_time">Выберите время начала</string>
    <string name="coworking_choose_end_time">Выберите время окончания</string>
    <string name="coworking_choose_date">Выберите дату</string>

    <string name="account_edit">Редактировать</string>
    <string name="qr_events">QR-коды мероприятий</string>
    <string name="qr_coworking">QR-коды коворкингов</string>

    <string name="account_edit_save">Сохранить</string>
</resources>