<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".FragmentAccountEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Email_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Email_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Password_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Password_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_password"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_First_Name_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_First_Name_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_first_name"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Last_Name_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Last_Name_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_last_name"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Birthday_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="none"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Birthday_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/registration_birth_date"
                android:inputType="date"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Phone_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Phone_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_phone_number"
                android:inputType="phone"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_Gender_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:startIconDrawable="@drawable/ic_gender">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_Gender_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_gender"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_Marital_Status_Edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_marital_status">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_Marital_Status_Edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/registration_marital_status"
                android:inputType="none"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Save"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="306dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:text="@string/account_edit_save"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:strokeColor="@color/pink" />

    </LinearLayout>


</FrameLayout>